[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/game/game-bg.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/game/game-over-avatar.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/game/game-over-stats-bg.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/game/ico-guesses.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/game/ico-players.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/game/ico-value.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/totals_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/textures/game/game-over-credits-bg.png" type="Texture" id=8]
[ext_resource path="res://src/stopped/GameOver.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/gameover_thanks.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/fonts/gameover_thanks_heading.tres" type="DynamicFont" id=11]

[node name="Stopped" type="CenterContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 179.0
margin_top = 63.0
margin_right = 1741.0
margin_bottom = 1017.0
custom_constants/separation = 80

[node name="MarginContainer" type="MarginContainer" parent="Content"]
margin_right = 1562.0
margin_bottom = 376.0
custom_constants/margin_left = 250

[node name="Avatar" type="TextureRect" parent="Content/MarginContainer"]
margin_left = 250.0
margin_right = 1562.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="TotalContainer" type="MarginContainer" parent="Content"]
margin_left = 287.0
margin_top = 456.0
margin_right = 1275.0
margin_bottom = 594.0
size_flags_horizontal = 6
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Content/TotalContainer"]
margin_right = 988.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
region_rect = Rect2( -1.28308, 1.2979, 214.075, 147.018 )
patch_margin_left = 104
patch_margin_top = 68
patch_margin_right = 105
patch_margin_bottom = 70

[node name="TotalTypesContainer" type="MarginContainer" parent="Content/TotalContainer"]
margin_right = 988.0
margin_bottom = 138.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="TotalTypes" type="HBoxContainer" parent="Content/TotalContainer/TotalTypesContainer"]
margin_left = 40.0
margin_right = 948.0
margin_bottom = 138.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="HBoxContainer" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes"]
margin_right = 207.0
margin_bottom = 138.0
custom_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes/Players"]
margin_top = 31.0
margin_right = 76.0
margin_bottom = 107.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes/Players"]
margin_left = 91.0
margin_top = 36.0
margin_right = 207.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 7 )
text = "9999"

[node name="Guesses" type="HBoxContainer" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes"]
margin_left = 307.0
margin_right = 543.0
margin_bottom = 138.0
custom_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes/Guesses"]
margin_top = 31.0
margin_right = 76.0
margin_bottom = 107.0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes/Guesses"]
margin_left = 91.0
margin_top = 36.0
margin_right = 236.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 7 )
text = "99999"

[node name="Dollars" type="HBoxContainer" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes"]
margin_left = 643.0
margin_right = 908.0
margin_bottom = 138.0
custom_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes/Dollars"]
margin_top = 31.0
margin_right = 76.0
margin_bottom = 107.0
size_flags_vertical = 4
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Content/TotalContainer/TotalTypesContainer/TotalTypes/Dollars"]
margin_left = 91.0
margin_top = 36.0
margin_right = 265.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 7 )
text = "999999"

[node name="CenterContainer" type="CenterContainer" parent="Content"]
margin_top = 674.0
margin_right = 1562.0
margin_bottom = 954.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Content/CenterContainer"]
margin_right = 1562.0
margin_bottom = 280.0

[node name="TextureRect" type="NinePatchRect" parent="Content/CenterContainer/MarginContainer"]
margin_right = 1562.0
margin_bottom = 280.0
texture = ExtResource( 8 )
patch_margin_left = 70
patch_margin_top = 142
patch_margin_right = 75
patch_margin_bottom = 138

[node name="MarginContainer" type="MarginContainer" parent="Content/CenterContainer/MarginContainer"]
margin_right = 1562.0
margin_bottom = 280.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Content/CenterContainer/MarginContainer/MarginContainer"]
margin_left = 40.0
margin_top = 20.0
margin_right = 1522.0
margin_bottom = 260.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Content/CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 1482.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SPECIAL THANKS TO THE BACKSTAGE CREW
--------"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Content/CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 1482.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Michael Elder, Michael Ciccone, Christopher Chase, Daniel McPherson,Matthew Carleton, Kyle Buchanan, 
Luke Dary, Ryan Emerson, Guilherme Baufaker RÃªgo, Kamesh Sampath, Evan Shortiss, William Burke, 
Ted Ross, Paolo Patierno, Subin Modeel, William Burns, Ben Browning, Davis Phillips"
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
